# wind-tunnel

./: .gitignore  Cargo.toml  README.md  clippy.toml  pyproject.toml
.cargo/: config.toml
crates/wt-dynamic/: Cargo.toml
crates/wt-dynamic/src/: lib.rs
crates/wt-extract/: Cargo.toml
crates/wt-extract/src/: hf.rs  lib.rs
crates/wt-extract/src/treesitter/: js.rs  mod.rs  python.rs  rust.rs
crates/wt-graph/: Cargo.toml
crates/wt-graph/src/: cycles.rs  graph.rs  lib.rs  purpose.rs
crates/wt-purpose/: Cargo.toml
crates/wt-purpose/src/: lib.rs
crates/wt-report/: Cargo.toml
crates/wt-report/src/: lib.rs
crates/wt-static/: Cargo.toml
crates/wt-static/src/: lib.rs
crates/wt-tests/: Cargo.toml
crates/wt-tests/src/: lib.rs
crates/wt-tests/tests/: e2e.rs
docs/: implementation.md  trace-format.md  usage.md
docs/sources/: disease-sequential-fuzzy-states.tex  epistemological-mode-equivalence.tex  finite-agent-coordination.tex  irreducible-recursion-residue.tex  minimum-sufficient-contact.tex  synchronised-agent-coordination.tex  synthesis.md  unconstrained-subtask-computing.tex  unconstrained-subtask-recursion.tex
publications/code-contact-map-generator/: code-contact-map-generator.tex  references.bib
publications/windtunnel-code-testing/: references.bib  windtunnel-code-testing.tex
publications/windtunnel-code-testing/figures/: code-captions.tex
scripts/: ci.sh
src/: contact_map_validation.py  contact_map_validation_results.json  panels.py  validation.py  validation_results.json
web/: next.config.js  package-lock.json  package.json
web/src/components/: Editor.js  Footer.js  Navbar.js  OutputPanel.js  SandboxIDE.js  SidebarExplorer.js  WindTunnelModel.js
web/src/components/Hooks/: useThemeSwitch.js
web/src/lib/: hf.js
web/src/pages/: _app.js  _document.js  index.js  sandbox.js
web/src/pages/api/: hf.js
wt/: Cargo.toml
wt/src/: main.rs
