[project]
name            = "wind-tunnel-validation"
version         = "0.1.0"
requires-python = ">=3.10"
description     = "Numerical validation suite and figure generator for the wind-tunnel paper"
dependencies    = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
