[package]
name        = "wt-extract"
version     = "0.1.0"
edition     = "2021"

[dependencies]
wt-graph            = { path = "../wt-graph" }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
anyhow              = { workspace = true }
tree-sitter         = { workspace = true }
tree-sitter-rust    = { workspace = true }
tree-sitter-python  = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-typescript  = { workspace = true }
ureq                = { workspace = true }
